# perfetto-docs

./: BUILD.gn  README.md
docs/: README.md  analysis.md  toc.md
docs/analysis/: concepts.md  index.md  metrics.md  trace-processor.md
docs/case-studies/: memory.md
docs/concepts/: buffers.md  clock-sync.md  config.md  detached-mode.md  service-model.md
docs/contributing/: build-instructions.md  common-tasks.md  community.md  embedding.md
docs/data-sources/: android-log.md  android-trace.md  atrace.md  cpu-freq.md  cpu-scheduling.md  java-heap-profiler.md  memory-counters.md  native-heap-profiler.md  power.md  scheduling.md  syscalls.md  system-log.md
docs/design-docs/: api-and-abi.md  continuous-integration.md  heapprofd-design.md  heapprofd-wire-protocol.md  ipc.md  life-of-a-tracing-session.md  protozero.md  security-model.md
docs/guides/: memory.md
docs/instrumentation/: tracing-sdk.md  track-events.md
docs/old/: analysis-old.md  app-instrumentation.md  architecture.md  benchmarks.md  build-instructions-old.md  clock-sync.md  embedder-guide.md  ftrace.md  ipc.md  long-traces.md  metrics-old.md  multi-layer-tracing.md  protozero.md  recording-traces.md  running.md  security-model.md  testing.md  trace-format.md  traceconv-old.md
docs/quickstart/: android-tracing.md  app-tracing.md  linux-tracing.md  metrics.md  profiling.md  trace-analysis.md  traceconv.md
docs/recording/: buffers.md  clock-sync.md  config.md  data-sources.md  detached-mode.md
docs/reference/: heap_profile-cli.md  perfetto-cli.md
docs/reference/cmdline/: heap_profile-cli.md  perfetto-cli.md
gn/standalone/: glob.py
infra/perfetto-site.appspot.com/: .firebaserc  .gcloudignore  BUILD.gn  app.yaml  deploy  firebase.json  package-lock.json  package.json
infra/perfetto-site.appspot.com/src/: gen_proto_reference.js  gen_sql_tables_reference.js  gen_stats_reference.js  markdown_render.js  template_footer.html  template_header.html  template_index.html  template_markdown.html
infra/perfetto-site.appspot.com/src/assets/: Perfetto Site.sketch  script.js  style.scss
protos/perfetto/trace/: perfetto_trace.proto  trace_packet.proto
src/trace_processor/storage/: stats.h
src/trace_processor/tables/: android_tables.h  counter_tables.h  metadata_tables.h  profiler_tables.h  slice_tables.h  track_tables.h
